MAINTAINERCLEANFILES = Makefile.in

libjackincludedir = $(includedir)/jack

libjackinclude_HEADERS = 	\
	intclient.h		\
	jack.h			\
	ringbuffer.h		\
	statistics.h            \
	session.h               \
	thread.h                \
	timestamps.h		\
	transport.h		\
	types.h	                \
	midiport.h              \
	weakmacros.h            \
	weakjack.h              \
	control.h		\
	jslist.h
